build: Compile, package and deploy with JDK 17 (#4529)